[tool.poetry]
name = "bluetooth-ble-sniffer"
version = "0.1.0"
description = ""
authors = ["David Peinado <iampeinado@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^2.7"
Beaker = "^1.11"
pytz = "^2019.2"
requests = "^2.22"
pybluez = "^0.22.0"
gattlib = "^0.20150805.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
