[tool.poetry]
name = "data-processor"
version = "0.1.0"
description = ""
authors = ["David Peinado <iampeinado@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
