[tool.poetry]
name = "wifi-sniffer"
version = "0.1.0"
description = ""
authors = ["David Peinado <iampeinado@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^2.7"
requests = "^2.22"
beaker = "^1.11"
pytz = "^2019.2"
scapy = "^2.4"

[tool.poetry.dev-dependencies]
"backports.functools_lru_cache" = "^1.5"
flake8 = "^3.7"
flake8-quotes = "^2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
